# fundamental-and-technical-public

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/ask-wiki/: SKILL.md
.claude/skills/wiki-ingest/: SKILL.md
llm-wiki/raw/processed/: Buffett-1965-Partnership-Letter-seed.md
llm-wiki/wiki/: AGENTS.md  INDEX.md  LOG.md  README.md  ROUTING.md
llm-wiki/wiki/authors/: buffett.md  marks.md
llm-wiki/wiki/entities/: berkshire-hathaway.md
scripts/: portfolio_prices.py
src/: __init__.py  __main__.py
src/calculators/: __init__.py  beta.py  black_scholes.py  lease_converter.py  rd_capitalizer.py  synthetic_rating.py  terminal_sanity.py  wacc.py
src/cascade/: __init__.py  config.py  data.py  report.py  scanner.py  signals.py
src/common/: __init__.py  backups.py  extraction.py  types.py
src/comps/: __init__.py  sotp_types.py
src/early/: __init__.py  backtest.py  cohort.py  data.py  fundamentals.py  report.py  scanner.py  scoring.py  signals.py
src/momentum/: __init__.py  data.py  fallen_angels.py  feishu.py  fundamentals.py  report.py  scanner.py  signals.py  universe.py
src/scout/: __init__.py  company.py  damodaran.py  holdings.py  market.py  segments.py
src/street/: __init__.py  analyzer.py  cli.py  formatter.py
src/tracker/: __init__.py  cli.py  digest.py  io.py  models.py  portfolio_join.py  verdict.py
tests/early/: test_backtest.py  test_cohort.py  test_scanner.py  test_scoring.py  test_signals.py
tests/tracker/: test_cli.py  test_digest.py  test_io.py  test_models.py  test_portfolio_join.py  test_verdict.py
(+63 files in other folders)
